Moved behaviour that modifies material aggregate and its children to pass through the Material repository adapter, not through the childrens adapters, thus respecting DDD